[gd_scene load_steps=17 format=3 uid="uid://ccme8rxijtf2s"]

[ext_resource type="Script" uid="uid://b3ifoxj2c0cjt" path="res://scenes/normal_player/normal_player.gd" id="1_ll2l8"]
[ext_resource type="PackedScene" uid="uid://vv063vdbl0aa" path="res://assets/models/astronaut/astronaut.res" id="2_rulc8"]
[ext_resource type="Script" uid="uid://cfwy76dpxuvoj" path="res://scenes/normal_player/player_ui.gd" id="3_kcm5r"]
[ext_resource type="LabelSettings" uid="uid://bvxjqgvujwjv6" path="res://scenes/normal_player/debug_label_settings.tres" id="4_dpwvv"]
[ext_resource type="Script" uid="uid://c62vv4kkvwuk1" path="res://scenes/normal_player/label_game_server_name.gd" id="4_ikqc6"]
[ext_resource type="Script" uid="uid://du8smr1o81j1c" path="res://scenes/normal_player/label_game_server_number_players.gd" id="5_dpwvv"]
[ext_resource type="Script" uid="uid://dtcuob2dcidgx" path="res://scenes/normal_player/label_server_zone.gd" id="5_ev378"]
[ext_resource type="Script" uid="uid://cp4hqc0wqd0l0" path="res://scenes/normal_player/label_game_server_number.gd" id="6_ev378"]
[ext_resource type="Script" uid="uid://bwj71lom8cof6" path="res://scenes/normal_player/label_universe_number_players.gd" id="7_82eon"]
[ext_resource type="PackedScene" uid="uid://dk4le3cck03bg" path="res://ui/direct_chat/direct_chat.tscn" id="8_ikqc6"]
[ext_resource type="Script" uid="uid://btyj4wvtqhqhg" path="res://scenes/normal_player/label_universe_number_box_50_cm.gd" id="10_0o2xm"]
[ext_resource type="PackedScene" uid="uid://kyr57ffqvlgr" path="res://ui/pause_menu/pause_menu.tscn" id="11_edphc"]
[ext_resource type="PackedScene" uid="uid://50boh4okyk04" path="res://ui/loading_screen/loading_screen.tscn" id="12_edphc"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2jk7f"]
radius = 0.26542
height = 1.8

[sub_resource type="BoxShape3D" id="BoxShape3D_kcm5r"]
size = Vector3(0.53418, 1.39465, 0.44873)

[sub_resource type="LabelSettings" id="LabelSettings_kcm5r"]
font_size = 24
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="NormalPlayer" type="CharacterBody3D" groups=["containable", "player"]]
script = ExtResource("1_ll2l8")
walk_speed = 5.0
sprint_speed = 10.0
metadata/client_uuid = ""

[node name="Placeholder_Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 0.9, 2.08165e-12)
shape = SubResource("CapsuleShape3D_2jk7f")

[node name="Astronaut" parent="Placeholder_Collider" instance=ExtResource("2_rulc8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9, 0)

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6541, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
far = 100000000.0

[node name="InteractRay" type="RayCast3D" parent="CameraPivot/Camera3D"]
target_position = Vector3(0, 0, -3)
collide_with_areas = true
collide_with_bodies = false

[node name="Torch" type="SpotLight3D" parent="CameraPivot/Camera3D"]
light_energy = 2.0
spot_range = 200.0
spot_angle = 41.4246

[node name="AreaDetector" type="Area3D" parent="."]
collision_layer = 4
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.702767, 0.0593262)
shape = SubResource("BoxShape3D_kcm5r")

[node name="ExtCamera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.793608, 0.608429, 0, -0.608429, 0.793608, 0, 1.87897, 1.33817)

[node name="LabelPlayerName" type="Label3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2, 0)
billboard = 1
text = "Dummy"

[node name="Labelserver_name" type="Label3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.05, 0)
billboard = 1
text = "DummyServer"
font_size = 24

[node name="UserInterface" type="Control" parent="."]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(576, 324)
mouse_filter = 2
script = ExtResource("3_kcm5r")

[node name="Debug" type="Control" parent="UserInterface"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="UserInterface/Debug"]
layout_mode = 0
offset_right = 561.0
offset_bottom = 127.0
color = Color(0, 0, 0, 0.690196)

[node name="Label" type="Label" parent="UserInterface/Debug"]
layout_mode = 0
offset_left = 65.0
offset_right = 277.0
offset_bottom = 23.0
text = "Connected to game server: "
label_settings = ExtResource("4_dpwvv")
horizontal_alignment = 2

[node name="Label4" type="Label" parent="UserInterface/Debug"]
layout_mode = 0
offset_left = 2.0
offset_top = 16.0
offset_right = 277.0
offset_bottom = 39.0
text = "Number of players on this game server: "
label_settings = ExtResource("4_dpwvv")
horizontal_alignment = 2

[node name="Label2" type="Label" parent="UserInterface/Debug"]
layout_mode = 0
offset_left = 28.0
offset_top = 32.0
offset_right = 278.0
offset_bottom = 55.0
text = "Number of active game servers: "
label_settings = ExtResource("4_dpwvv")
horizontal_alignment = 2

[node name="Label3" type="Label" parent="UserInterface/Debug"]
layout_mode = 0
offset_top = 48.0
offset_right = 278.0
offset_bottom = 71.0
text = "Number of total players in the universe: "
label_settings = ExtResource("4_dpwvv")
horizontal_alignment = 2

[node name="Label_number_box50cm" type="Label" parent="UserInterface/Debug"]
layout_mode = 0
offset_top = 98.0
offset_right = 278.0
offset_bottom = 121.0
text = "Number of total box50cm in the universe: "
label_settings = ExtResource("4_dpwvv")
horizontal_alignment = 2

[node name="Labelx" type="Label" parent="UserInterface/Debug"]
layout_mode = 0
offset_left = 3.0
offset_top = 62.0
offset_right = 23.0
offset_bottom = 85.0
text = "x: "
label_settings = ExtResource("4_dpwvv")

[node name="Labely" type="Label" parent="UserInterface/Debug"]
layout_mode = 0
offset_left = 191.0
offset_top = 62.0
offset_right = 211.0
offset_bottom = 85.0
text = "y: "
label_settings = ExtResource("4_dpwvv")

[node name="Labelz" type="Label" parent="UserInterface/Debug"]
layout_mode = 0
offset_left = 379.0
offset_top = 62.0
offset_right = 399.0
offset_bottom = 85.0
text = "z: "
label_settings = ExtResource("4_dpwvv")

[node name="Labelserver_zone" type="Label" parent="UserInterface/Debug"]
layout_mode = 0
offset_left = 3.0
offset_top = 77.0
offset_right = 638.0
offset_bottom = 100.0
text = "Server zone:"
label_settings = ExtResource("4_dpwvv")
script = ExtResource("5_ev378")

[node name="LabelGameserver_name" type="Label" parent="UserInterface/Debug"]
layout_mode = 0
offset_left = 281.0
offset_right = 403.0
offset_bottom = 23.0
text = "Soon™"
label_settings = ExtResource("4_dpwvv")
script = ExtResource("4_ikqc6")

[node name="LabelGameServerNumberPlayers" type="Label" parent="UserInterface/Debug"]
layout_mode = 0
offset_left = 281.0
offset_top = 16.0
offset_right = 403.0
offset_bottom = 39.0
text = "Soon™"
label_settings = ExtResource("4_dpwvv")
script = ExtResource("5_dpwvv")

[node name="LabelGameServerNumber" type="Label" parent="UserInterface/Debug"]
layout_mode = 0
offset_left = 281.0
offset_top = 32.0
offset_right = 403.0
offset_bottom = 55.0
text = "Soon™"
label_settings = ExtResource("4_dpwvv")
script = ExtResource("6_ev378")

[node name="LabelUniverseNumberPlayers" type="Label" parent="UserInterface/Debug"]
layout_mode = 0
offset_left = 281.0
offset_top = 48.0
offset_right = 403.0
offset_bottom = 71.0
text = "Soon™"
label_settings = ExtResource("4_dpwvv")
script = ExtResource("7_82eon")

[node name="LabelUniverseNumberBox50cm" type="Label" parent="UserInterface/Debug"]
layout_mode = 0
offset_left = 289.0
offset_top = 97.0
offset_right = 411.0
offset_bottom = 120.0
text = "Soon™"
label_settings = ExtResource("4_dpwvv")
script = ExtResource("10_0o2xm")

[node name="LabelXValue" type="Label" parent="UserInterface/Debug"]
layout_mode = 0
offset_left = 21.0
offset_top = 62.0
offset_right = 181.0
offset_bottom = 85.0
label_settings = ExtResource("4_dpwvv")

[node name="LabelYValue" type="Label" parent="UserInterface/Debug"]
layout_mode = 0
offset_left = 208.0
offset_top = 62.0
offset_right = 368.0
offset_bottom = 85.0
label_settings = ExtResource("4_dpwvv")

[node name="LabelZValue" type="Label" parent="UserInterface/Debug"]
layout_mode = 0
offset_left = 393.0
offset_top = 60.0
offset_right = 553.0
offset_bottom = 83.0
label_settings = ExtResource("4_dpwvv")

[node name="HUD" type="Control" parent="UserInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CrosshairContainer" type="CenterContainer" parent="UserInterface/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Crosshair" type="Control" parent="UserInterface/HUD/CrosshairContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="InteractLabel" type="Label" parent="UserInterface/HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -45.5
offset_top = -80.0
offset_right = 45.5
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 0
text = "Interact"
label_settings = SubResource("LabelSettings_kcm5r")
horizontal_alignment = 1

[node name="DirectChat" parent="UserInterface" instance=ExtResource("8_ikqc6")]
visible = false
layout_mode = 1
mouse_filter = 1

[node name="PauseMenu" parent="UserInterface" instance=ExtResource("11_edphc")]
layout_mode = 1

[node name="LoadingScreen" parent="UserInterface" instance=ExtResource("12_edphc")]
visible = false

[connection signal="draw" from="UserInterface/HUD/CrosshairContainer/Crosshair" to="UserInterface" method="_on_crosshair_draw"]
